syntax = "proto3";

package delta_sharing.recipients.v1;

import "google/protobuf/struct.proto";

enum AuthenticationType {
  // No authentication is required.
  AUTHENTICATION_TYPE_UNSPECIFIED = 0;

  // Basic authentication is required.
  TOKEN = 1;

  // OAuth2 authentication is required.
  OAUTH_CLIENT_CREDENTIALS = 2;
}

message RecipientToken {
  // Unique ID of the recipient token.
  string id = 1;

  // Time at which this recipient token was created, in epoch milliseconds.
  int64 created_at = 2;

  // Username of recipient token creator.
  string created_by = 3;

  // Full activation URL to retrieve the access token. It will be empty if the token is already retrieved.
  string activation_url = 4;

  // Expiration timestamp of the token in epoch milliseconds.
  int64 expiration_time = 5;

  // Time at which this recipient token was updated, in epoch milliseconds.
  int64 updated_at = 6;

  // Username of recipient token updater.
  string updated_by = 7;
}

message RecipientInfo {
  // Unique ID of the recipient.
  optional string id = 100;

  // The name of the recipient.
  string name = 1;

  // The delta sharing authentication type.
  AuthenticationType authentication_type = 2;

  // Username of the recipient owner.
  string owner = 3;

  // Description about the recipient.
  string comment = 4;

  // A map of key-value properties attached to the securable.
  optional google.protobuf.Struct properties = 6;

  // Time at which this share was created, in epoch milliseconds.
  optional int64 created_at = 7;

  // Username of the creator of the share.
  optional string created_by = 8;

  // This field is only present when the authentication_type is TOKEN.
  repeated RecipientToken tokens = 9;

  // Time at which this share was updated, in epoch milliseconds.
  optional int64 updated_at = 10;

  // Username of share updater.
  optional string updated_by = 11;
}
