import ExternalLocationInfo from "../../../gen/jsonschema/delta_sharing.external_locations.v1.ExternalLocationInfo.jsonschema.json";
import CreateExternalLocationRequest from "../../../gen/jsonschema/delta_sharing.external_locations.v1.CreateExternalLocationRequest.jsonschema.json";
import UpdateExternalLocationRequest from "../../../gen/jsonschema/delta_sharing.external_locations.v1.UpdateExternalLocationRequest.jsonschema.json";
import CatalogInfo from "../../../gen/jsonschema/delta_sharing.catalogs.v1.CatalogInfo.jsonschema.json";
import CreateCatalogRequest from "../../../gen/jsonschema/delta_sharing.catalogs.v1.CreateCatalogRequest.jsonschema.json";
import UpdateCatalogRequest from "../../../gen/jsonschema/delta_sharing.catalogs.v1.UpdateCatalogRequest.jsonschema.json";
import SchemaInfo from "../../../gen/jsonschema/delta_sharing.schemas.v1.SchemaInfo.jsonschema.json";
import CreateSchemaRequest from "../../../gen/jsonschema/delta_sharing.schemas.v1.CreateSchemaRequest.jsonschema.json";
import UpdateSchemaRequest from "../../../gen/jsonschema/delta_sharing.schemas.v1.UpdateSchemaRequest.jsonschema.json";
import RecipientInfo from "../../../gen/jsonschema/delta_sharing.recipients.v1.RecipientInfo.jsonschema.json";
import CreateRecipientRequest from "../../../gen/jsonschema/delta_sharing.recipients.v1.CreateRecipientRequest.jsonschema.json";
import UpdateRecipientRequest from "../../../gen/jsonschema/delta_sharing.recipients.v1.UpdateRecipientRequest.jsonschema.json";
import ShareInfo from "../../../gen/jsonschema/delta_sharing.shares.v1.ShareInfo.jsonschema.json";
import CreateShareRequest from "../../../gen/jsonschema/delta_sharing.shares.v1.CreateShareRequest.jsonschema.json";
import UpdateShareRequest from "../../../gen/jsonschema/delta_sharing.shares.v1.UpdateShareRequest.jsonschema.json";

// Credential schemas
import CredentialInfo from "../../../gen/jsonschema/delta_sharing.credentials.v1.CredentialInfo.jsonschema.json";
import CreateCredentialRequest from "../../../gen/jsonschema/delta_sharing.credentials.v1.CreateCredentialRequest.jsonschema.json";
import UpdateCredentialRequest from "../../../gen/jsonschema/delta_sharing.credentials.v1.UpdateCredentialRequest.jsonschema.json";
import AzureServicePrincipal from "../../../gen/jsonschema/delta_sharing.credentials.v1.AzureServicePrincipal.jsonschema.json";
import AzureManagedIdentity from "../../../gen/jsonschema/delta_sharing.credentials.v1.AzureManagedIdentity.jsonschema.json";
import AzureStorageKey from "../../../gen/jsonschema/delta_sharing.credentials.v1.AzureStorageKey.jsonschema.json";

// well known schemas
import Struct from "../../../gen/jsonschema/google.protobuf.Struct.jsonschema.json";

export default {
    ExternalLocationInfo,
    CreateExternalLocationRequest,
    UpdateExternalLocationRequest,
    CatalogInfo,
    CreateCatalogRequest,
    UpdateCatalogRequest,
    SchemaInfo,
    CreateSchemaRequest,
    UpdateSchemaRequest,
    CredentialInfo,
    CreateCredentialRequest,
    UpdateCredentialRequest,
    RecipientInfo,
    CreateRecipientRequest,
    UpdateRecipientRequest,
    ShareInfo,
    CreateShareRequest,
    UpdateShareRequest,
    AzureServicePrincipal,
    AzureManagedIdentity,
    AzureStorageKey,
    Struct,
};
